--- a/dataset_pandas_profiling.ipynb
+++ b/dataset_pandas_profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[42059 rows x 59 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,316 +408,6 @@
     "df = pd.read_csv(\"dataset/2012_2019_PlatteRiverWeir_features_merged_all.csv\")\n",
     "df.columns = df.columns.str.replace(' ', '')\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SiteNumber</th>\n",
-       "      <th>Stage</th>\n",
-       "      <th>Discharge</th>\n",
-       "      <th>width</th>\n",
-       "      <th>height</th>\n",
-       "      <th>exposure</th>\n",
-       "      <th>fNumber</th>\n",
-       "      <th>isoSpeed</th>\n",
-       "      <th>shutterSpeed</th>\n",
-       "      <th>grayMean</th>\n",
-       "      <th>...</th>\n",
-       "      <th>WeirPt2X</th>\n",
-       "      <th>WeirPt2Y</th>\n",
-       "      <th>WwRawLineMin</th>\n",
-       "      <th>WwRawLineMax</th>\n",
-       "      <th>WwRawLineMean</th>\n",
-       "      <th>WwRawLineSigma</th>\n",
-       "      <th>WwCurveLineMin</th>\n",
-       "      <th>WwCurveLineMax</th>\n",
-       "      <th>WwCurveLineMean</th>\n",
-       "      <th>WwCurveLineSigma</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>42059.0</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.0</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "      <td>42059.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>2.878743</td>\n",
-       "      <td>970.956439</td>\n",
-       "      <td>4288.122114</td>\n",
-       "      <td>2848.082170</td>\n",
-       "      <td>0.161720</td>\n",
-       "      <td>4.001284</td>\n",
-       "      <td>200.261537</td>\n",
-       "      <td>-0.886029</td>\n",
-       "      <td>94.079832</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1898.152025</td>\n",
-       "      <td>1632.199410</td>\n",
-       "      <td>1977.239592</td>\n",
-       "      <td>65649.770061</td>\n",
-       "      <td>30264.791367</td>\n",
-       "      <td>15731.203913</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>60178.912979</td>\n",
-       "      <td>29772.190243</td>\n",
-       "      <td>15696.114426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.805533</td>\n",
-       "      <td>1192.272290</td>\n",
-       "      <td>14.458545</td>\n",
-       "      <td>9.729114</td>\n",
-       "      <td>0.927797</td>\n",
-       "      <td>0.087761</td>\n",
-       "      <td>31.007433</td>\n",
-       "      <td>1.128978</td>\n",
-       "      <td>15.028168</td>\n",
-       "      <td>...</td>\n",
-       "      <td>781.483283</td>\n",
-       "      <td>661.348746</td>\n",
-       "      <td>4652.898679</td>\n",
-       "      <td>32223.396961</td>\n",
-       "      <td>18033.801170</td>\n",
-       "      <td>8019.757666</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30401.134688</td>\n",
-       "      <td>17742.927957</td>\n",
-       "      <td>8116.052744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>4288.000000</td>\n",
-       "      <td>2848.000000</td>\n",
-       "      <td>0.000125</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>-3.000000</td>\n",
-       "      <td>55.006235</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>2.280000</td>\n",
-       "      <td>213.000000</td>\n",
-       "      <td>4288.000000</td>\n",
-       "      <td>2848.000000</td>\n",
-       "      <td>0.000400</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>85.048836</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2065.000000</td>\n",
-       "      <td>1900.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>54055.000000</td>\n",
-       "      <td>22276.942952</td>\n",
-       "      <td>12542.627859</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>48217.500000</td>\n",
-       "      <td>21865.041625</td>\n",
-       "      <td>12283.186085</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>2.550000</td>\n",
-       "      <td>388.000000</td>\n",
-       "      <td>4288.000000</td>\n",
-       "      <td>2848.000000</td>\n",
-       "      <td>0.000800</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>93.352083</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2144.000000</td>\n",
-       "      <td>1900.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>71156.000000</td>\n",
-       "      <td>30991.115132</td>\n",
-       "      <td>16836.506394</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>64319.000000</td>\n",
-       "      <td>30465.611018</td>\n",
-       "      <td>16720.918634</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>3.290000</td>\n",
-       "      <td>1350.000000</td>\n",
-       "      <td>4288.000000</td>\n",
-       "      <td>2848.000000</td>\n",
-       "      <td>0.004000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>-1.000000</td>\n",
-       "      <td>102.487423</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2264.000000</td>\n",
-       "      <td>1900.000000</td>\n",
-       "      <td>1869.000000</td>\n",
-       "      <td>87312.000000</td>\n",
-       "      <td>39182.093440</td>\n",
-       "      <td>20831.296076</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>80074.500000</td>\n",
-       "      <td>38551.906070</td>\n",
-       "      <td>20913.502125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6674500.0</td>\n",
-       "      <td>6.490000</td>\n",
-       "      <td>7920.000000</td>\n",
-       "      <td>6000.000000</td>\n",
-       "      <td>4000.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>4000.000000</td>\n",
-       "      <td>12.643856</td>\n",
-       "      <td>168.998160</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3275.000000</td>\n",
-       "      <td>1900.000000</td>\n",
-       "      <td>68747.000000</td>\n",
-       "      <td>132262.000000</td>\n",
-       "      <td>113048.598055</td>\n",
-       "      <td>48565.667751</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>130865.000000</td>\n",
-       "      <td>110286.915789</td>\n",
-       "      <td>48267.082318</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 53 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       SiteNumber         Stage     Discharge         width        height  \\\n",
-       "count     42059.0  42059.000000  42059.000000  42059.000000  42059.000000   \n",
-       "mean    6674500.0      2.878743    970.956439   4288.122114   2848.082170   \n",
-       "std           0.0      0.805533   1192.272290     14.458545      9.729114   \n",
-       "min     6674500.0      0.000000      0.000000   4288.000000   2848.000000   \n",
-       "25%     6674500.0      2.280000    213.000000   4288.000000   2848.000000   \n",
-       "50%     6674500.0      2.550000    388.000000   4288.000000   2848.000000   \n",
-       "75%     6674500.0      3.290000   1350.000000   4288.000000   2848.000000   \n",
-       "max     6674500.0      6.490000   7920.000000   6000.000000   4000.000000   \n",
-       "\n",
-       "           exposure       fNumber      isoSpeed  shutterSpeed      grayMean  \\\n",
-       "count  42059.000000  42059.000000  42059.000000  42059.000000  42059.000000   \n",
-       "mean       0.161720      4.001284    200.261537     -0.886029     94.079832   \n",
-       "std        0.927797      0.087761     31.007433      1.128978     15.028168   \n",
-       "min        0.000125      4.000000    200.000000     -3.000000     55.006235   \n",
-       "25%        0.000400      4.000000    200.000000     -1.000000     85.048836   \n",
-       "50%        0.000800      4.000000    200.000000     -1.000000     93.352083   \n",
-       "75%        0.004000      4.000000    200.000000     -1.000000    102.487423   \n",
-       "max       25.000000     13.000000   4000.000000     12.643856    168.998160   \n",
-       "\n",
-       "       ...      WeirPt2X      WeirPt2Y  WwRawLineMin   WwRawLineMax  \\\n",
-       "count  ...  42059.000000  42059.000000  42059.000000   42059.000000   \n",
-       "mean   ...   1898.152025   1632.199410   1977.239592   65649.770061   \n",
-       "std    ...    781.483283    661.348746   4652.898679   32223.396961   \n",
-       "min    ...     -1.000000     -1.000000      0.000000       0.000000   \n",
-       "25%    ...   2065.000000   1900.000000      0.000000   54055.000000   \n",
-       "50%    ...   2144.000000   1900.000000      0.000000   71156.000000   \n",
-       "75%    ...   2264.000000   1900.000000   1869.000000   87312.000000   \n",
-       "max    ...   3275.000000   1900.000000  68747.000000  132262.000000   \n",
-       "\n",
-       "       WwRawLineMean  WwRawLineSigma  WwCurveLineMin  WwCurveLineMax  \\\n",
-       "count   42059.000000    42059.000000         42059.0    42059.000000   \n",
-       "mean    30264.791367    15731.203913             0.0    60178.912979   \n",
-       "std     18033.801170     8019.757666             0.0    30401.134688   \n",
-       "min         0.000000        0.000000             0.0        0.000000   \n",
-       "25%     22276.942952    12542.627859             0.0    48217.500000   \n",
-       "50%     30991.115132    16836.506394             0.0    64319.000000   \n",
-       "75%     39182.093440    20831.296076             0.0    80074.500000   \n",
-       "max    113048.598055    48565.667751             0.0   130865.000000   \n",
-       "\n",
-       "       WwCurveLineMean  WwCurveLineSigma  \n",
-       "count     42059.000000      42059.000000  \n",
-       "mean      29772.190243      15696.114426  \n",
-       "std       17742.927957       8116.052744  \n",
-       "min           0.000000          0.000000  \n",
-       "25%       21865.041625      12283.186085  \n",
-       "50%       30465.611018      16720.918634  \n",
-       "75%       38551.906070      20913.502125  \n",
-       "max      110286.915789      48267.082318  \n",
-       "\n",
-       "[8 rows x 53 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
    ]
   },
   {
@@ -736,7 +426,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile = ProfileReport(df, title=\"Pandas Profiling Report\")"
+    "profile = ProfileReport(df, title=\"Hydrology data report\", explorative=True)"
    ]
   },
   {
@@ -748,8 +438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enabling notebook extension jupyter-js-widgets/extension...\r\n",
-      "      - Validating: \u001b[32mOK\u001b[0m\r\n"
+      "Enabling notebook extension jupyter-js-widgets/extension...\n",
+      "      - Validating: \u001b[32mOK\u001b[0m\n"
      ]
     }
    ],
@@ -759,18 +449,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#profile.to_widgets(\n",
+    "#profile.to_notebook_iframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95999eb8275b41d88863ff47b73dc200",
+       "model_id": "0e0e848a7c324dfebbfbb73ddfd90016",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Summarize dataset:   0%|          | 0/5 [00:00<?, ?it/s]"
+       "Export report to file:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -778,8 +478,7 @@
     }
    ],
    "source": [
-    "profile.to_widgets()\n",
-    "profile.to_notebook_iframe()"
+    "profile.to_file(output_file='report.html')"
    ]
   },
   {
@@ -792,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('AI')",
    "language": "python",
    "name": "python3"
   },
@@ -806,11 +505,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8036d000083d9c8e2133564bb58ecd6b29036dbd0e0a50b264afcf6a2fa15ce7"
+    "hash": "d3195bcac7665d94292c51415de587dfe31631e0f2da24bab4176ae761a97102"
    }
   }
  },
