--- a/models/cnn_model/cnn_v1.ipynb
+++ b/models/cnn_model/cnn_v1.ipynb
@@ -774,10 +774,11 @@
    "source": [
     "import datetime\n",
     "\n",
-    "log_dir = \"logs/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "date_actual = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "log_dir = \"logs/fit/\" + date_actual\n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "\n",
-    "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath=\"model_weights/cnn_best_weights.hdf5\",\n",
+    "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath=f\"model_weights/{date_actual}_cnn_best_weights.hdf5\",\n",
     "                               monitor='val_mse',\n",
     "                               verbose=1,\n",
     "                               save_best_only=True)\n"
@@ -847,6 +848,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_test_ds = next(iter(test_ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 117,
    "metadata": {},
    "outputs": [
@@ -863,6 +873,8 @@
    ],
    "source": [
     "for image, stage_discharge in train_ds.take(1):\n",
+    "\tpredictions = model.predict(x=image)\n",
+    "\t\n",
     "\tdiff = predictions[:2].flatten() - stage_discharge[:2].numpy().flatten()\n",
     "\tpercentDiff = (diff / stage_discharge[:2].numpy().flatten()) * 100\n",
     "\tabsPercentDiff = np.abs(percentDiff)\n",
@@ -876,13 +888,6 @@
     "\tprint(f\"pred stage: {scaler.inverse_transform(predictions[:2])[0]}, actual stage: {scaler.inverse_transform(stage_discharge[:2].numpy())[0]}\")\n",
     "\tprint(f\"pred discharge: {scaler.inverse_transform(predictions[:2])[0]}, actual discharge: {scaler.inverse_transform(stage_discharge[:2].numpy())[0]}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -916,7 +921,7 @@
     }
    ],
    "source": [
-    "activations = activation_model.predict(test_ds, steps=np.ceil(test_size / 32)) "
+    "activations = activation_model.predict(small_test_ds, steps=np.ceil(test_size / 32)) "
    ]
   },
   {
@@ -1055,7 +1060,7 @@
     "    display_grid = np.zeros((size * n_cols, images_per_row * size))\n",
     "    \n",
     "    print(layer_name)\n",
-    "    if (\"Dense\" in layer_name): break\n",
+    "    if (\"flatten\" in layer_name): break\n",
     "\n",
     "    for col in range(n_cols): # Tiles each filter into a big horizontal grid\n",
     "        for row in range(images_per_row):\n",
@@ -1080,7 +1085,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('tf-gpu')",
+   "display_name": "Python 3.10.6 ('AI')",
    "language": "python",
    "name": "python3"
   },
@@ -1098,7 +1103,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "79f576286c1276b480d6696ed40f6607e18214e4a2875a618cb5be817ff26007"
+    "hash": "8036d000083d9c8e2133564bb58ecd6b29036dbd0e0a50b264afcf6a2fa15ce7"
    }
   }
  },
