--- a/models/cnn_model/best_models_weights/cnn_v9.ipynb
+++ b/models/cnn_model/best_models_weights/cnn_v9.ipynb
@@ -523,6 +523,7 @@
    "source": [
     "from glob import glob\n",
     "\n",
+    "# images were not augmented in this case\n",
     "def make_dataset(path, batch_size, df, seed=None):\n",
     "  np.random.seed(seed)\n",
     "\n",
@@ -539,12 +540,12 @@
     "    #image = tf.image.resize(image, [IMG_SIZE, IMG_SIZE])\n",
     "\n",
     "    # image augmentation\n",
-    "    image = brightness(image)\n",
-    "    image = contrast(image)\n",
-    "    image = zoom(image)\n",
-    "    image = flip(image)\n",
-    "    image = translation(image)\n",
-    "    image = rotation(image)\n",
+    "    #image = brightness(image)\n",
+    "    #image = contrast(image)\n",
+    "    #image = zoom(image)\n",
+    "    #image = flip(image)\n",
+    "    #image = translation(image)\n",
+    "    #image = rotation(image)\n",
     "\n",
     "    image = tf.cast(image, tf.float32)\n",
     "    image /= 255\n",
